--- a/phpBB_3.1.x/documentation.html
+++ b/phpBB_3.1.x/documentation.html
@@ -6,7 +6,7 @@
 <h1>FunCaptcha phpBB (3.1.x) Integration</h1>
 <h3>Install the plugin</h3>
 <p>To start with, FTP into your site and find your phpBB directory. By default, it will be called phpBB3.</p>
-<p>You will need to upload the contents of  swipeads into the phpBB3/etx directory.</p>
+<p>You will need to upload the contents of  swipeads into the phpBB3/ext directory.</p>
 <p>After the upload is complete, log into the Administration Control Panel (ACP) and go to Customise -&gt; Manage extensions. You should see your recently uploaded extension listed under "Disabled Extensions". Simply click its "Enable" button and installation is complete!</p>
 <p>Now to configure FunCaptcha, go to General Tab and Click the Spambot countermeasures link in the sidebar, under Board Configuration.</p>
 <p>In the Available Plugins section, select FUNCAPTCHA from the dropdown and click Configure.</p>
